k3s/optional/openplc-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: openplc-ingress
  namespace: ot-namespace
spec:
  podSelector:
    matchLabels:
      app: openplc
  policyTypes: [Ingress]
  ingress:
    - from:
        - podSelector:
            matchLabels:
              access-openplc: "true"
      ports:
        - protocol: TCP
          port: 8443
        - protocol: TCP
          port: 502
